--- a/PS_1/task1/warm-up.html
+++ b/PS_1/task1/warm-up.html
@@ -23,12 +23,15 @@
     padding: 1rem;
   }
 
-  .floats {
+  .floats .column {
     overflow: hidden;
+    width:calc(100%/3);
+    float: left;
   }
 
   .blocks .column {
     display: inline-block;
+    width:calc(100%/3);
   }
 
   .flexbox {
@@ -38,21 +41,21 @@
 
   .grid {
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: repeat(3, auto);
   }
 
   </style>
 </head>
 <body>
   <section class="floats">
-    <div class="column" style="background-color: #1abc9c; float:left; width:calc(100%/3)">1</div>
-    <div class="column" style="background-color: #2ecc71; float:left; width:calc(100%/3)">2</div>
-    <div class="column" style="background-color: #3498db; float:left; width:calc(100%/3)">3</div>
+    <div class="column" style="background-color: #1abc9c">1</div>
+    <div class="column" style="background-color: #2ecc71">2</div>
+    <div class="column" style="background-color: #3498db">3</div>
   </section>
   <section class="blocks">
-    <div class="column" style="background-color: #f39c12; width:calc(100%/3)">1</div>
-    <div class="column" style="background-color: #d35400; width:calc(100%/3); margin:-4px">2</div>
-    <div class="column" style="background-color: #c0392b; width:calc(100%/3)">3</div>
+    <div class="column" style="background-color: #f39c12">1</div><!--
+    --><div class="column" style="background-color: #d35400">2</div><!--
+    --><div class="column" style="background-color: #c0392b">3</div>
   </section>
   <section class="flexbox">
     <div class="column" style="background-color: #16a085; flex-basis: calc(100%/3)">1</div>
