--- a/PS_1/task2/index.html
+++ b/PS_1/task2/index.html
@@ -13,13 +13,13 @@
     <div class="leftColumn"> <b> Left Column </b> <br> Menu <br> Menu <br> Menu <br> Menu</div>
     <div class="rightColumn"> <b> Right Column </b> <br> link <br> link <br> link <br> link </div>
     <div class="content"> <h2> Content </h2>
-       <p>Lorem ipsum dolor sit amet, at choro homero sit. Tritani ponderum facilisis eum at, sit error torquatos persequeris eu. Mel ne veniam tempor causae, pertinax interesset eos id. Facilis torquatos elaboraret est ex, dolore euismod mea eu, nec ea assum malorum delectus. Eu aeterno dolores probatus sea, iisque vivendo cum et.</p>
-       <p>Lorem ipsum dolor sit amet, at choro homero sit. Tritani ponderum facilisis eum at, sit error torquatos persequeris eu. Mel ne veniam tempor causae, pertinax interesset eos id. Facilis torquatos elaboraret est ex, dolore euismod mea eu, nec ea assum malorum delectus. Eu aeterno dolores probatus sea, iisque vivendo cum et.</p>
-       <p>Lorem ipsum dolor sit amet, at choro homero sit. Tritani ponderum facilisis eum at, sit error torquatos persequeris eu. Mel ne veniam tempor causae, pertinax interesset eos id. Facilis torquatos elaboraret est ex, dolore euismod mea eu, nec ea assum malorum delectus. Eu aeterno dolores probatus sea, iisque vivendo cum et.</p>
-       <p>Lorem ipsum dolor sit amet, at choro homero sit. Tritani ponderum facilisis eum at, sit error torquatos persequeris eu. Mel ne veniam tempor causae, pertinax interesset eos id. Facilis torquatos elaboraret est ex, dolore euismod mea eu, nec ea assum malorum delectus. Eu aeterno dolores probatus sea, iisque vivendo cum et.</p>
-
-     </div>
-    <div class="footer"> <b> @SGS </b> </div>
+      <p>Lorem ipsum dolor sit amet, at choro homero sit. Tritani ponderum facilisis eum at, sit error torquatos persequeris eu. Mel ne veniam tempor causae, pertinax interesset eos id. Facilis torquatos elaboraret est ex, dolore euismod mea eu, nec ea assum malorum delectus. Eu aeterno dolores probatus sea, iisque vivendo cum et.</p>
+      <p>Lorem ipsum dolor sit amet, at choro homero sit. Tritani ponderum facilisis eum at, sit error torquatos persequeris eu. Mel ne veniam tempor causae, pertinax interesset eos id. Facilis torquatos elaboraret est ex, dolore euismod mea eu, nec ea assum malorum delectus. Eu aeterno dolores probatus sea, iisque vivendo cum et.</p>
+      <p>Lorem ipsum dolor sit amet, at choro homero sit. Tritani ponderum facilisis eum at, sit error torquatos persequeris eu. Mel ne veniam tempor causae, pertinax interesset eos id. Facilis torquatos elaboraret est ex, dolore euismod mea eu, nec ea assum malorum delectus. Eu aeterno dolores probatus sea, iisque vivendo cum et.</p>
+      <p>Lorem ipsum dolor sit amet, at choro homero sit. Tritani ponderum facilisis eum at, sit error torquatos persequeris eu. Mel ne veniam tempor causae, pertinax interesset eos id. Facilis torquatos elaboraret est ex, dolore euismod mea eu, nec ea assum malorum delectus. Eu aeterno dolores probatus sea, iisque vivendo cum et.</p>
+    </div>
   </div>
- </body>
+  <footer class="footer"><b> @SGS </b></footer>
+
+</body>
 </html>
