--- a/PS_1/task3/index.html
+++ b/PS_1/task3/index.html
@@ -13,8 +13,8 @@
 
   <section class="header">
       <div class="head_content">
-        <span id="brand_1"><b>N</b></span>
-        <span id="brand_2"><b>++</b></span></div>
+        <span id="head_brand_1"><b>N</b></span>
+        <span id="head_brand_2"><b>++</b></span></div>
       <div class="head_content"> </div>
       <div class="head_content"> </div>
       <div class="head_content"><a class="head_link" href="#">PRODUCTS</a></div>
@@ -22,58 +22,68 @@
       <div class="head_content"><a class="head_link" href="#">CONTACT US</a></div>
   </section>
 
-  <section class="block_1">
-    <div class="block_1_img"> <img src="img/phone_for_task3.png" alt="phone_img" style="width:150px; height:250px"></div>
-    <div class="block_1_1">
-    <div class="block_1_2"><p><span><b>Our awesome app is ready to use!</b></span></p></div>
-    <div class="block_1_3"><p><span>Lorem ipsum dolor sit amet, at choro homero sit. Tritani ponderum facilisis eum at, sit error torquatos persequeris eu. Mel ne veniam tempor causae, pertinax interesset eos id. Facilis torquatos elaboraret est ex, dolore euismod mea eu, nec ea assum malorum delectus. Eu aeterno dolores probatus sea, iisque vivendo cum et.</span></p></div>
-    <p></p>
-    <input class="btn" type="button" value="Buy now!" onclick="alert('You clicked this button. Ok!')" name="btn">
+  <section class="container_1">
+    <div class="container_1_img"> <img id="img_1" src="img/phone_for_task3.png" alt="phone_img"></div>
+    <div class="container_1_content">
+    <div class="container_1_content_row1"><p><span><b>Our awesome app is ready to use!</b></span></p></div>
+    <div class="container_1_content_row2"><p><span>Lorem ipsum dolor sit amet, at choro homero sit. Tritani ponderum facilisis eum at, sit error torquatos persequeris eu. Mel ne veniam tempor causae, pertinax interesset eos id. Facilis torquatos elaboraret est ex, dolore euismod mea eu, nec ea assum malorum delectus. Eu aeterno dolores probatus sea, iisque vivendo cum et.</span></p></div>
+    <p><input class="btn" type="button" value="Buy now!" onclick="alert('You clicked this button. Ok!')" name="btn"></p>
     </div>
   </section>
 
-  <section class="block_2">
-    <div class="block_2_1">
-      <div class="icon"> <i class="fa fa-code fa-2x"></i> </div>
-      <p></p>
-      <span><a href="#" class="block_2_link"><b>Web development</b></a></span>
-      <p></p>
-      <span class="block_2_content">Lorem ipsum dolor sit amet, commune vulputate ea sea. Vim meliore argumentum ad, eos ad choro veritus luptatum, est munere detraxit ea. Solum dolorum nostrum cum ne. Vix cu doctus placerat persecuti. Sit ne invidunt evertitur, vis doctus omittam id.</span>
+  <section class="container_2">
+    <div class="container_2_col">
+      <div class="column_icon"> <i class="fa fa-code fa-2x"></i> </div>
+      <p><span><a href="#" class="column_link"><b>Web development</b></a></span></p>
+      <p><span class="column_content">Lorem ipsum dolor sit amet, commune vulputate ea sea. Vim meliore argumentum ad, eos ad choro veritus luptatum, est munere detraxit ea. Solum dolorum nostrum cum ne. Vix cu doctus placerat persecuti. Sit ne invidunt evertitur, vis doctus omittam id.</span></p>
     </div>
-    <div class="block_2_1">
-      <div class="icon"> <i class="fa fa-robot fa-2x"></i> </div>
-      <p></p>
-      <span><a href="#" class="block_2_link"><b>Mobile development</b></a></span>
-      <p></p>
-      <span class="block_2_content">Lorem ipsum dolor sit amet, decore moderatius te mea, an eum solum noluisse appareat. Modus altera eloquentiam qui an. Cu purto fabulas luptatum has, aeque vocibus consectetuer no eam. At euripidis urbanitas eam, hinc nonumes salutandi mei ad, te quo sumo dicam.</span>
+    <div class="container_2_col">
+      <div class="column_icon"> <i class="fa fa-robot fa-2x"></i> </div>
+      <p><span><a href="#" class="column_link"><b>Mobile development</b></a></span></p>
+      <p><span class="column_content">Lorem ipsum dolor sit amet, decore moderatius te mea, an eum solum noluisse appareat. Modus altera eloquentiam qui an. Cu purto fabulas luptatum has, aeque vocibus consectetuer no eam. At euripidis urbanitas eam, hinc nonumes salutandi mei ad, te quo sumo dicam.</span></p>
     </div>
-    <div class="block_2_1">
-      <div class="icon"> <i class="fa fa-cloud fa-2x"></i> </div>
-      <p></p>
-      <span><a href="#" class="block_2_link"><b>Highload</b></a></span>
-      <p></p>
-      <span class="block_2_content">Lorem ipsum dolor sit amet, ornatus gloriatur definitiones ius te, ex per tamquam assueverit. Ea odio vivendo qui, salutatus moderatius his id. In vidisse malorum impedit pro, nam no quas solum. Usu prima invenire inciderint no.</span>
+    <div class="container_2_col">
+      <div class="column_icon"> <i class="fa fa-cloud fa-2x"></i> </div>
+      <p><span><a href="#" class="column_link"><b>Highload</b></a></span></p>
+      <p><span class="column_content">Lorem ipsum dolor sit amet, ornatus gloriatur definitiones ius te, ex per tamquam assueverit. Ea odio vivendo qui, salutatus moderatius his id. In vidisse malorum impedit pro, nam no quas solum. Usu prima invenire inciderint no.</span></p>
     </div>
   </section>
 
   <section class="footer">
     <div class="user_data">
       <div class="footer_head"><b>Contact us!</b></div>
-      <div id="forms">
+      <div id="footer_form">
         <form class="input">
           <label>
           <input type="text" align="center" placeholder="Type here your name, please" size="50" maxlength="30">
-          </label><p></p>
-          <label>
+          </label>
+          <p><label>
+            <input type="radio" name="gender" value="male" checked> Male
+            <input type="radio" name="gender" value="female"> Female
+          </label></p>
+          <p><label>
           <input type="text" placeholder="Type here your email, please" size="50">
-          </label>
-          <p></p><label>
+          </label></p>
+          <p><label>
           <input type="text" placeholder="Type here your phone, please" size="50">
-          </label>
-          <p></p><label>
-          <textarea name="comment" cols="48" rows="3" placeholder="Ask your question"></textarea></p>
-          </label>
-          <p><input class="btn2" type="submit" value="Send email!" onclick="alert('You send email. Ok!')" name="btn2"></p>
+          </label></p>
+          <p><label>
+          <input type="password" name="psw" placeholder="Enter password, please">
+          </label></p>
+          <p><label>
+            <input type="checkbox" name="checkbox"> Remember me! </label></p>
+          <p><label>
+            <p><label>
+              <input type="color" name="color" value="#202020">
+              <input type="submit" name="color_submit" value="Choose color">
+            </label></p>
+            <p><label>
+              <input type="datetime-local" name="date">
+            </label></p>
+          <textarea name="comment" cols="48" rows="3" placeholder="Ask your question"></textarea></label></p>
+          <p><input class="btn2" type="submit" value="Send email!" onclick="alert('You send email. Ok!')" name="btn2">
+          <input type="reset" name="rst" class="btn3"> </p>
+
         </form>
       </div>
     </div>
