--- a/PS_1/task3/index.html
+++ b/PS_1/task3/index.html
@@ -53,43 +53,60 @@
     <div class="user_data">
       <div class="footer_head"><b>Contact us!</b></div>
       <div id="footer_form">
-        <form class="input">
+        <form class="input2">
           <label>
-          <input type="text" align="center" placeholder="Type here your name, please" size="50" maxlength="30">
+          <input type="text"   placeholder="Type here your name, please" size="50" maxlength="30">
           </label>
           <p><label>
-            <input type="radio" name="gender" value="male" checked> Male
+            <input type="radio" name="gender" value="male" checked size="50" maxlength="30"> Male
             <input type="radio" name="gender" value="female"> Female
           </label></p>
           <p><label>
           <input type="email" placeholder="Type here your email, please" size="50">
+          <p><label>
+          <input type="url" name="url" placeholder="Type your url, please" size="50">
           </label></p>
-          <p><input class="btn2" type="submit" value="Send email!" onclick="alert('You send email. Ok!')" name="btn2">
+          <p><input type="tel" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" placeholder="Enter your telephone number" size="50"</p>
+          </label></p>
+
+          <p><input class="btn2" type="submit" value="Send email!" onclick="alert('WOW, You click this button!')" name="btn2">
           <input type="reset" name="rst" class="btn3"> </p>
+
           <p><label>
-          <input type="text" placeholder="Type here your phone, please" size="50">
-          </label></p>
-          <p><label>
-          <input type="password" name="psw" placeholder="Enter password, please">
+          <input type="password" name="psw" placeholder="Enter password, please" size="50">
           </label></p>
           <p><label>
             <input type="checkbox" name="checkbox"> Remember me! </label></p>
           <p><label>
             <p><label>
               <input type="color" name="color" value="#202020">
-              <input type="submit" name="color_submit" value="Choose color">
+              <input class="btn2" type="submit" name="color_submit" value="Choose color" onclick="alert('WOW, You click this button!')" name="btn2">
             </label></p>
+            <p><label> Level:
+              <input type="range" name="range" min="-100" max="100">
+              <input  class="btn2" type="submit" name="color_submit" value="Send" onclick="alert('WOW, You click this button!')" name="btn2">
+            </p>   </label>
             <p><label>
-              <input type="datetime-local" name="date">
+              <input class="usr_date-time" type="datetime-local" name="date-time" size="50">
+              <p><input class="usr_date-time" type="month" name="month" placeholder="Emner the month and year" size="50"></p>
+              <p><input class="usr_date-time" type="week" name="week" placeholder="Enter week year, please" size="50"></p>
+              <p><input class="usr_date-time" type="date" name="date" placeholder="Enter the date" size="50"></p>
+              <p><input class="usr_date-time" type="time" name="time" placeholder="Enter time, please" size="50"></p>
             </label></p>
             <p><label><p>Enter number from 3 to 5</p>
-              <input type="number" name="num" placeholder="*****" min="3" max="8">
-              <input type="submit" name="num" value="Send it!">
+              <input type="number" name="num" placeholder="*****" min="3" max="8" size="50">
+              <input class="btn2" type="submit" name="num" value="Send it!" onclick="alert('WOW, You click this button!')" name="btn2">
+              <input type="reset" name="rst" class="btn3">
+
             </label></p>
             <p><label>Select a file:
                <input type="file" name="myFile">
             </label></p>
-          <textarea name="comment" cols="48" rows="3" placeholder="Ask your question"></textarea></label></p>
+          <textarea name="comment" cols="48" rows="3" placeholder="Ask your question" size="50"></textarea></label></p>
+          <p><label>
+            <input  type="search" name="searchGogl" placeholder="Search me!" size="42">
+            <input class="btn4" type="submit" name="color_submit" value="Search!">
+          </label></p>
 
         </form>
       </div>
