--- a/GoT_forms/index.html
+++ b/GoT_forms/index.html
@@ -9,55 +9,44 @@
 
 </head>
 <body>
-
-  <div class="main_block">
-    <div class="col_left"><img class="img" src="img/maxresdefault.jpg" alt="leftblock_img"></div>
-    <div class="col_right">
-       <section class="block_1">
-         <div class="header"><h1>GAME OF TRONES<br></h1></div>
-         <!-- <form class="form_1" action="#" method="post">
-            <label class="tittle" for="user_email">Enter your email</label>
-            <p></p>
-            <input class="input" type="email" name="user_email" placeholder="arya@westeros.com">
-            <p></p>
-            <label class="tittle" for="user_pass">Choose secure password</label>
-            <label class="tittle_2" for="notice"><br>Must be at least 8 characters</label>
-            <p></p>
-            <input class="input" type="password" name="user_pass" placeholder="password" minlength="8">
-            <p></p>
-            <input class="check" type="checkbox" name="checkbox" id="newcheck">
+  <div class="wrapper">
+    <div class="leftColumn"> </div>
+    <div class="rightColumn">
+      <div class="rightColumn_header"><h1>GAME OF THRONES<br></h1></div>
+      <section class="form_register">
+        <form  action="#" method="post">
+          <label for="user_email">Enter your email</label>
+          <input id="email" type="email" name="user_email" placeholder="arya@westeros.com">
+          <label for="user_pass">Choose secure password</label>
+          <label class="note" for="note"> Must be at least 8 characters</label>
+          <input id="password" type="password" name="user_pass" placeholder="password" minlength="8">
+          <div><input class="checkbox" type="checkbox" name="checkbox" id="newcheck">
             <label for="newcheck">Remember me</label>
-            <p></p>
-            <input class="btn_1" type="submit" value="Sign Up">
-         </form> -->
-       </section>
+          </div>
+          <input class="button" type="submit" value="Sign Up">
+        </form>
+      </section>
 
-       <section class="block_2">
-         <div class="msg">You've succesfully joined the game<br>Tell us more about yourself.</div>
-          <form class="form_2" action="#" method="post">
-            <label class="tittle" for="user_name">Who are you?</label>
-            <label class="tittle_2" for="notice"><br>Alpha-numeric username</label>
-            <p></p>
-            <input class="input" type="text" name="user_name" placeholder="arya">
-            <p></p>
-            <label for="user_house">Your Great House</label>
-            <p></p>
-            <select class="house" name="user_house">
-              <option value="Select" selected> Select House </option>
-              <option value="House 1">House 1</option>
-              <option value="House 2">House 2</option>
-              <option value="House 3">House 3</option>
-              <option value="House 4">House 4</option>
-            </select>
-            <p></p>
-            <label for="comment">You preferences, hobbies, wishes, etc.</label>
-            <p></p>
-            <textarea class="input" name="comment" rows="3" cols="20" placeholder="I have a long TOKILL list..."></textarea>
-            <p></p>
-            <input class="btn_2" type="submit" name="save" value="Save">
-         </form>
-       </section>
-     </div>
+      <!-- <section class="form_userInfo">
+        <div class="info_msg">You've succesfully joined the game<br>Tell us more about yourself.</div>
+        <form action="#" method="post">
+          <label for="user_name">Who are you?</label>
+          <label class="note" for="note">Alpha-numeric username</label>
+          <input id="user_name" type="text" name="user_name" placeholder="arya">
+          <label for="user_house">Your Great House</label>
+          <select id="houses" name="user_house">
+            <option value="Select" selected> Select House </option>
+            <option value="House 1">House 1</option>
+            <option value="House 2">House 2</option>
+            <option value="House 3">House 3</option>
+            <option value="House 4">House 4</option>
+          </select>
+          <label for="comment">You preferences, hobbies, wishes, etc.</label>
+          <textarea id="aboutUser" name="comment" rows="3" cols="20" placeholder="I have a long TOKILL list..."></textarea>
+          <input class="button" type="submit" name="save" value="Save">
+        </form>
+      </section> -->
+    </div>
   </div>
 
 </body>
