--- a/PS_2/warm-up/task2/index.html
+++ b/PS_2/warm-up/task2/index.html
@@ -4,29 +4,36 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="style.css">
   <title>Task 2</title>
 </head>
 <body>
-  <section class="task_2">
+  <section class="wrapper">
     <div>
+      <h2>Step 1.</h2>
       <form>
-        <label class="label">Enter the time in the seconds </label>
-        <p></p>
-        <input id="sec_1" type="number" name="time_1" placeholder="Enter time in seconds">
-        <p></p>
-        <input type="button" name="btn2" value="Calculate the time" onclick="calcTime()">
-        <p></p>
+        <label class="task_condition"><b>Enter the time in the seconds:</b></label>
+        <input id="usr_input" type="number" name="time_1" placeholder="Only digits!">
+         <p><label class="text_warning">*If push this button you will calculate the time (format hh:mm:ss):</label></p>
+        <input type="button" value="Calculate the time" onclick="calcTime()">
+       </form>
+    </div>
+    <div class="result"><span>The result is: </span>
+    <div id="result_sec"></div>
+  </div>
+
+    <div>
+      <h2>Step 2.</h2>
+      <form>
+        <label class="task_condition"><b>Enter the time in the format hh:mm:ss</b></label>
+        <input id="usr_num" type="datetime" name="time_2" placeholder="format hh:mm:ss">
+        <p><label class="text_warning">*If push this button you will calculate the time (to seconds):</label><p>
+        <input type="button" value="Calculate seconds" onclick="calcSec()">
       </form>
     </div>
-    <div id="res2"></div> <p></p>
-    <div class="time2">
-      <form class="user_input_3">
-        <label class="label">Enters the time in the format hh:mm:ss,</label> <p></p>
-        <input id="usr_num" type="datetime" name="time_2" placeholder="format hh:mm:ss"> <p></p>
-        <input type="button" name="btn3" value="Calculate seconds" onclick="calcSec()">
-      </form>
-    </div> <p></p>
-    <div id="res3"></div>
+    <div class="result"><span>The result is: </span>
+    <div id="result_time"></div>
+    </div>
   </section>
   <script src="script.js"></script>
 </body>
