--- a/PS_2/warm-up/task1/index.html
+++ b/PS_2/warm-up/task1/index.html
@@ -8,24 +8,20 @@
 </head>
 <body>
 
-  <section class="task_1">
-    <div class="header"><h1>Calculator</h1></div>
-    <div class="content">
-      <form class="forms">
-        <p></p>
-        <label class="input_1">Please, enter first number</label>
-        <input id="num1" type="number" name="num1" placeholder="Enter first number">
-        <p></p>
-        <label class="input_1">Please, enter second number</label>
-        <input id="num2" type="number" name="num2"placeholder="Enter second number">
-        <p></p>
-        <span id="nottice">*Only numbers that end in 2,3 and 7 are summed.</span>
-        <p></p>
+  <section class="wrapper">
+    <h1>Calculator</h1>
+    <div>
+      <form>
+        <label class="condition">Please, enter first number</label>
+        <input id="usr_input1" type="number" placeholder="Enter first number">
+        <p><label class="condition">Please, enter second number</label>
+        <input id="usr_input2" type="number" placeholder="Enter second number"></p>
+        <p><span id="text_warning">*Only numbers that end in 2,3 and 7 are summed.</span></p>
         <input type="button" name="btn1" value="Calculate it!" onclick="calcSum()">
       </form>
       <div>
-        <span id="result">The sum of numbers in the interval between you entered = </span>
-        <div id="res"></div>
+        <p><span id="result_area">The sum of numbers in the interval between you entered is:</span>
+        <div id="calc_result"></div></p>
       </div>
       <script src="script.js"></script>
     </section>
