--- a/PS_1/task1/warm-up.html
+++ b/PS_1/task1/warm-up.html
@@ -4,68 +4,31 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="style.css">
   <title>Warm-up</title>
-  <style media="screen">
-  body {
-    margin: 0;
-  }
-
-  * {
-    box-sizing: border-box;
-  }
-
-  .column {
-    font-size: 4rem;
-    color: white;
-    font-weight: bold;
-    font-family: Helvetica;
-    text-align: center;
-    padding: 1rem;
-  }
-
-  .floats .column {
-    overflow: hidden;
-    width:calc(100%/3);
-    float: left;
-  }
-
-  .blocks .column {
-    display: inline-block;
-    width:calc(100%/3);
-  }
-
-  .flexbox {
-    display: flex;
-    justify-content: space-between;
-  }
-
-  .grid {
-    display: grid;
-    grid-template-columns: repeat(3, auto);
-  }
-
-  </style>
+  <!-- <style media="screen"> -->
+  <!-- </style> -->
 </head>
 <body>
   <section class="floats">
-    <div class="column" style="background-color: #1abc9c">1</div>
-    <div class="column" style="background-color: #2ecc71">2</div>
-    <div class="column" style="background-color: #3498db">3</div>
+    <div class="column">1</div>
+    <div class="column">2</div>
+    <div class="column">3</div>
   </section>
   <section class="blocks">
-    <div class="column" style="background-color: #f39c12">1</div><!--
-    --><div class="column" style="background-color: #d35400">2</div><!--
-  --><div class="column" style="background-color: #c0392b">3</div>
+    <div class="column">1</div><!--
+    --><div class="column">2</div><!--
+  --><div class="column">3</div>
 </section>
 <section class="flexbox">
-  <div class="column" style="background-color: #16a085; flex-basis: calc(100%/3)">1</div>
-  <div class="column" style="background-color: #27ae60; flex-basis: calc(100%/3)">2</div>
-  <div class="column" style="background-color: #2980b9; flex-basis: calc(100%/3)">3</div>
+  <div class="column">1</div>
+  <div class="column">2</div>
+  <div class="column">3</div>
 </section>
 <section class="grid">
-  <div class="column" style="background-color: #f1c40f">1</div>
-  <div class="column" style="background-color: #e67e22">2</div>
-  <div class="column" style="background-color: #e74c3c">3</div>
+  <div class="column">1</div>
+  <div class="column">2</div>
+  <div class="column">3</div>
 </section>
 </body>
 </html>
