--- a/PS_2/warm-up/task5/index.html
+++ b/PS_2/warm-up/task5/index.html
@@ -4,9 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Task 5</title>
 </head>
 <body>
-
+  <section class="wrapper">
+    <div>
+      <textarea id="user_input"></textarea>
+    </div>
+    <input type="button" value="Start" onclick="go()">
+    <div id="res"></div>
+  </section>
+  <script src="script.js"> </script>
 </body>
 </html>
