--- a/PS_1/task1/warm-up.html
+++ b/PS_1/task1/warm-up.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="style.css">
   <title>Warm-up</title>
-  <!-- <style media="screen"> -->
-  <!-- </style> -->
+  <style media="screen">
+  </style>
 </head>
 <body>
   <section class="floats">
@@ -17,7 +17,7 @@
   </section>
   <section class="blocks">
     <div class="column">1</div><!--
-    --><div class="column">2</div><!--
+  --><div class="column">2</div><!--
   --><div class="column">3</div>
 </section>
 <section class="flexbox">
