--- a/PS_1/task3/index.html
+++ b/PS_1/task3/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <script src="https://kit.fontawesome.com/d99209edeb.js"></script>
+  <!-- <script src="https://kit.fontawesome.com/d99209edeb.js"></script> -->
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="style.css">
   <title>Task_3</title>
 </head>
@@ -27,7 +28,7 @@
       <div class="container_1_content">
         <div class="container_1_content_row1"><p><span><b>Our awesome app is ready to use!</b></span></p></div>
         <div class="container_1_content_row2"><p><span>Lorem ipsum dolor sit amet, at choro homero sit. Tritani ponderum facilisis eum at, sit error torquatos persequeris eu. Mel ne veniam tempor causae, pertinax interesset eos id. Facilis torquatos elaboraret est ex, dolore euismod mea eu, nec ea assum malorum delectus. Eu aeterno dolores probatus sea, iisque vivendo cum et.</span></p></div>
-        <p><input class="btn" type="button" value="Buy now!" onclick="alert('You clicked this button. Ok!')" name="btn"></p>
+        <p><input class="btn" id="BuyNow" type="button" value="Buy now!" onclick="alert('You clicked this button. Ok!')" name="btn"></p>
       </div>
     </section>
 
@@ -38,7 +39,7 @@
         <p><span class="column_content">Lorem ipsum dolor sit amet, commune vulputate ea sea. Vim meliore argumentum ad, eos ad choro veritus luptatum, est munere detraxit ea. Solum dolorum nostrum cum ne. Vix cu doctus placerat persecuti. Sit ne invidunt evertitur, vis doctus omittam id.</span></p>
       </div>
       <div class="container_2_col">
-        <div class="column_icon"> <i class="fa fa-robot fa-2x"></i> </div>
+        <div class="column_icon"> <i class="fa fa-android fa-2x"></i> </div>
         <p><span><a href="#" class="column_link"><b>Mobile development</b></a></span></p>
         <p><span class="column_content">Lorem ipsum dolor sit amet, decore moderatius te mea, an eum solum noluisse appareat. Modus altera eloquentiam qui an. Cu purto fabulas luptatum has, aeque vocibus consectetuer no eam. At euripidis urbanitas eam, hinc nonumes salutandi mei ad, te quo sumo dicam.</span></p>
       </div>
@@ -53,52 +54,43 @@
       <div>
         <div class="footer_head"><b>Contact us!</b></div>
         <div id="footer_form">
-          <form class="input2">
-            <label>
-              <input class="user_data" type="text" placeholder="Type here your name, please" size="40"> </label>
-            <p><label>
+          <form class="form_input">
+            <div class="user_info"><input class="user_data" type="text" placeholder="Type here your name, please" size="40"></
+            </div>
+            <div class="user_info"><label>
               <input type="radio" name="gender" value="male" checked> Male
-              <input type="radio" name="gender" value="female"> Female </label></p>
-            <p><label>
-              <input class="user_data" type="email" placeholder="Type here your email, please" size="40">
-              </label></p>
-            <p><label>
-              <input class="user_data" type="url" name="url" placeholder="Type your url, please" size="40">
-              </label></p>
-            <p><label>
-              <input class="user_data" type="tel" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" placeholder="Enter your telephone number" size="40"></label></p>
-            <p><label>
-              <input class="user_data" type="password" name="psw" placeholder="Enter password, please" size="40"></label></p>
-            <p><input class="btn" type="submit" value="Send user data!" onclick="alert('WOW, You sent user information! Cool!')" name="btn">
-              <input class="btn" type="reset" name="rst" value="Reset"  onclick="alert('Information are reset')"></p>
-            <p><label>
-              <input type="checkbox" name="checkbox"> Remember me! </label></p>
-            <p><label><p>Please, enter year, month, week, date, time:</p>
-              <input class="usr_date-time" type="datetime-local" name="date-time" size="50">
-              <p><input class="usr_date-time" type="month" name="month" placeholder="Emner the month and year" size="50"></p>
-              <p><input class="usr_date-time" type="week" name="week" placeholder="Enter week year, please" size="50"></p>
-              <p><input class="usr_date-time" type="date" name="date" placeholder="Enter the date" size="50"></p>
-              <p><input class="usr_date-time" type="time" name="time" placeholder="Enter time, please" size="50"></p></label></p>
-            <p><label>Select a file:<input type="file" name="myFile"></label></p>
-            <p><label>
-              <input id="usr_num"type="number" name="num" placeholder="Enter number from 3 to 5" min="3" max="8" size="50">
-            <p><label>
-              <textarea id="textarea" name="comment" cols="48" rows="3" placeholder="Ask your question"  ></textarea></label></p>
-              <p><input class="btn" type="submit" name="num" value="Send it!" onclick="alert('WOW, You choose the number! Cool!')" name="btn">
-              <input class="btn" type="reset" name="rst" value="Reset" onclick="alert('Information are reset')"></p></label></p>
-            <p><label>Choose color, please!
-              <input type="color" name="color" value="#e15f41">
-              <input class="btn" type="submit" name="color_submit" value="Choose color" onclick="alert('Oh my Good! You choose such a beautiful color! Cool!')" name="btn"></label></p>
-            <p><label> Level:
-              <input type="range" name="range" min="-100" max="100">
-              <input  class="btn" type="submit" name="color_submit" value="Send" onclick="alert('Respekt! This is a very good choose!')" name="btn"></label></p>
-            <p><label>
-              <input id="search" type="search" name="searchGogl" placeholder="Search me!">
-              <input class="btn" type="submit" name="color_submit" value="Search!"></label></p>
-        </form>
-      </div>
-    </div>
-  </section>
+              <input type="radio" name="gender" value="female"> Female </label></div>
+              <div class="user_info"><input class="user_data" type="email" placeholder="Type here your email, please" size="40"></div>
+              <div class="user_info"><input class="user_data" type="url" name="url" placeholder="Type your url, please" size="40"></div>
+              <div class="user_info"><input class="user_data" type="tel" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" placeholder="Enter your telephone number" size="40"></div>
+              <div class="user_info"><input class="user_data" type="password" name="psw" placeholder="Enter password, please" size="40"></div>
+              <div class="user_info"><input class="btn" type="submit" value="Send user data!" onclick="alert('WOW, You sent user information! Cool!')" name="btn">
+                <input class="btn" type="reset" name="rst" value="Reset"  onclick="alert('Information are reset')"></div>
+                <div class="user_info"><input type="checkbox" name="checkbox">Remember me!</label></div>
+                <div class="user_info"><label>Please, enter year, month, week, date, time:</label></div>
+                <div class="user_info"><input class="usr_date-time" type="datetime-local" name="date-time" size="50"></div>
+                <div class="user_info"><input class="usr_date-time" type="month" name="month" placeholder="Emner the month and year" size="50"></div>
+                <div class="user_info"><input class="usr_date-time" type="week" name="week" placeholder="Enter week year, please" size="50"></div>
+                <div class="user_info"><input class="usr_date-time" type="date" name="date" placeholder="Enter the date" size="50"></div>
+                <div class="user_info"><input class="usr_date-time" type="time" name="time" placeholder="Enter time, please" size="50"></div>
+                <div class="user_info"><label id="selectFile">Select a file:</label></div>
+                <div class="user_info"><input type="file" name="myFile"></div>
+                <div class="user_info"><input id="usr_num"type="number" name="num" placeholder="Enter number from 3 to 5" min="3" max="8" size="50"></div>
+                <div class="user_info"><textarea id="textarea" name="comment" cols="48" rows="3" placeholder="Ask your question"></textarea></div>
+                <div class="user_info"><input class="btn" type="submit" name="num" value="Send it!" onclick="alert('WOW, You choose the number! Cool!')" name="btn">
+                  <input class="btn" type="reset" name="rst" value="Reset" onclick="alert('Information are reset')"></div>
+                  <div class="user_info"><label>Choose color, please!</label>
+                    <input type="color" name="color" value="#e15f41">
+                    <input class="btn" type="submit" name="color_submit" value="Choose color" onclick="alert('Oh my Good! You choose such a beautiful color! Cool!')" name="btn"></div>
+                    <div class="user_info"><label> Level:</label></div>
+                    <div class="user_info"><input type="range" name="range" min="-100" max="100">
+                      <input  class="btn" type="submit" name="color_submit" value="Send" onclick="alert('Respekt! This is a very good choose!')" name="btn"></div>
+                      <div class="user_info"><input id="search" type="search" name="searchGogl" placeholder="Search me!">
+                        <input class="btn" type="submit" name="color_submit" value="Search!"></div>
+                      </form>
+                    </div>
+                  </div>
+                </section>
 
-  </body>
-</html>
+              </body>
+              </html>
