--- a/PS_1/task2/index.html
+++ b/PS_1/task2/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title> Task_2 </title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Playfair+Display&display=swap&subset=cyrillic" rel="stylesheet">
 </head>
 <body>
   <div class="basicBlock">
