--- a/PS_2/warm-up/task5/index.html
+++ b/PS_2/warm-up/task5/index.html
@@ -11,8 +11,8 @@
     <div>
       <textarea id="user_input"></textarea>
     </div>
-    <input type="button" value="Start" onclick="go()">
-    <div id="res"></div>
+    <!-- <input type="button" value="Start" onclick="go()"> -->
+    <div id="result"></div>
   </section>
   <script src="script.js"> </script>
 </body>
