--- a/PS_2/warm-up/task6/index.html
+++ b/PS_2/warm-up/task6/index.html
@@ -14,7 +14,7 @@
       <div><textarea id="user_text" rows="8" cols="30" autofocus></textarea></div>
       <div><label class="input">Enter RegEx or text</label></div>
       <div><input type="text" id="user_regEx" placeholder="Enter RegEx or text"></div>
-      <div><input type="button" id="match" value="Match!" onclick="searchAndMark()"></div>
+      <div><input type="button" id="matchBtn" value="Match!"></div>
     </form>
     <div id="result"></div>
   </section>
