--- a/PS_2/warm-up/task6/index.html
+++ b/PS_2/warm-up/task6/index.html
@@ -11,10 +11,10 @@
   <section>
     <form>
       <div><label class="input">Enter any text</label></div>
-      <div><textarea id="user_text" rows="8" cols="30" autofocus></textarea></div>
+      <div><textarea id="userText" rows="8" cols="30" autofocus></textarea></div>
       <div><label class="input">Enter RegEx or text</label></div>
-      <div><input type="text" id="user_regEx" placeholder="Enter RegEx or text"></div>
-      <div><input type="button" id="matchBtn" value="Match!"></div>
+      <div><input type="text" id="userExp" placeholder="Enter RegExp or text"></div>
+      <div><input type="submit" id="matchBtn" value="Match!"></div>
     </form>
     <div id="result"></div>
   </section>
