--- a/PS_2/warm-up/task5/index.html
+++ b/PS_2/warm-up/task5/index.html
@@ -7,6 +7,7 @@
   <title>Task 5</title>
 </head>
 <body>
+
   <section class="wrapper">
     <form name="form1" onReset="alert('The text area will be cleared.')">
       <div><textarea id="user_input" autofocus></textarea></div>
@@ -14,6 +15,7 @@
     </form>
     <div id="result"></div>
   </section>
-  <script src="script.js"></script>
+  <script src="main.js"></script>
+
 </body>
 </html>
