--- a/PS_2/warm-up/task4/index.html
+++ b/PS_2/warm-up/task4/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="style.css">
   <title>Task 4</title>
 </head>
+
 <body>
   <section class="wrapper">
     <span><h1>Make Chessboard</h1></span>
@@ -20,6 +21,7 @@
     <div id="box"></div>
 
   </section>
-  <script src="script.js"></script>
+  <script src="main.js"></script>
+
 </body>
 </html>
