--- a/PS_2/warm-up/task3/index.html
+++ b/PS_2/warm-up/task3/index.html
@@ -7,6 +7,7 @@
   <title>Document</title>
 </head>
 <body>
+
   <section class="task_3">
     <div class="time3">
       <form class="user_input_4">
@@ -19,7 +20,8 @@
         <input type="button" name="btn3" value="Calculate data&time span" onclick="calcTimeSpan()">
       </form>
     </div> <p></p>
-    <script src="script.js"></script>
   </section>
+  <script src="main.js"></script>
+
 </body>
 </html>
