--- a/PS_2/warm-up/task2/index.html
+++ b/PS_2/warm-up/task2/index.html
@@ -7,7 +7,9 @@
   <link rel="stylesheet" href="style.css">
   <title>Task 2</title>
 </head>
+
 <body>
+
   <section class="wrapper">
     <div>
       <h2>Step 1.</h2>
@@ -16,11 +18,11 @@
         <input id="usr_input" type="number" name="time_1" placeholder="Only digits!">
          <p><label class="text_warning">*If push this button you will calculate the time (format hh:mm:ss):</label></p>
         <input type="button" value="Calculate the time" onclick="calcTime()">
-       </form>
+      </form>
     </div>
     <div class="result"><span>The result is: </span>
-    <div id="result_sec"></div>
-  </div>
+      <div id="result_sec"></div>
+    </div>
 
     <div>
       <h2>Step 2.</h2>
@@ -32,9 +34,10 @@
       </form>
     </div>
     <div class="result"><span>The result is: </span>
-    <div id="result_time"></div>
+      <div id="result_time"></div>
     </div>
   </section>
-  <script src="script.js"></script>
+  <script src="main.js"></script>
+
 </body>
 </html>
