--- a/PS_2/warm-up/task1/index.html
+++ b/PS_2/warm-up/task1/index.html
@@ -16,14 +16,16 @@
         <input id="usr_input1" type="number" placeholder="Enter first number">
         <p><label class="condition">Please, enter second number</label>
         <input id="usr_input2" type="number" placeholder="Enter second number"></p>
-        <p><span id="text_warning">*Only numbers that end in 2,3 and 7 are summed.</span></p>
+        <span id="text_warning">*Only numbers that end in 2,3 and 7 are summed.<br></span>
         <input type="button" name="btn1" value="Calculate it!" onclick="calcSum()">
       </form>
       <div>
-        <p><span id="result_area">The sum of numbers in the interval between you entered is:</span>
-        <div id="calc_result"></div></p>
+        <span id="result_area"><br>The sum of numbers in the interval between you entered is:</span>
+        <div id="calc_result"></div>
       </div>
-      <script src="script.js"></script>
-    </section>
-  </body>
-  </html>
+    </div>
+
+  </section>
+  <script src="main.js"></script>
+</body>
+</html>
