--- a/PS_2/warm-up/task2/index.html
+++ b/PS_2/warm-up/task2/index.html
@@ -14,10 +14,10 @@
     <div>
       <h2>Step 1.</h2>
       <form>
-        <label class="task_condition"><b>Enter the time in the seconds:</b></label>
+        <label class="task_condition" for="usr_input"><b>Enter the time in the seconds:</b></label>
         <input id="usr_input" type="number" name="time_1" placeholder="Only digits!">
-         <p><label class="text_warning">*If push this button you will calculate the time (format hh:mm:ss):</label></p>
-        <input type="button" value="Calculate the time" onclick="calcTime()">
+         <p><label class="text_warning" for="btnCalcTime">*If push this button you will calculate the time (format hh:mm:ss):</label></p>
+        <input type="button" id="btnCalcTime" value="Calculate the time" onclick="calcTime()">
       </form>
     </div>
     <div class="result"><span>The result is: </span>
@@ -27,10 +27,10 @@
     <div>
       <h2>Step 2.</h2>
       <form>
-        <label class="task_condition"><b>Enter the time in the format hh:mm:ss</b></label>
+        <label class="task_condition" for="usr_num"><b>Enter the time in the format hh:mm:ss</b></label>
         <input id="usr_num" type="datetime" name="time_2" placeholder="format hh:mm:ss">
-        <p><label class="text_warning">*If push this button you will calculate the time (to seconds):</label><p>
-        <input type="button" value="Calculate seconds" onclick="calcSec()">
+        <p><label class="text_warning" for="btnCalcSec">*If push this button you will calculate the time (to seconds):</label><p>
+        <input type="button" id="btnCalcSec" value="Calculate seconds" onclick="calcSec()">
       </form>
     </div>
     <div class="result"><span>The result is: </span>
