--- a/PS_2/warm-up/task2/index.html
+++ b/PS_2/warm-up/task2/index.html
@@ -14,8 +14,8 @@
     <div>
       <h2>Step 1.</h2>
       <form>
-        <label class="task_condition" for="usr_input"><b>Enter the time in the seconds:</b></label>
-        <input id="usr_input" type="number" name="time_1" placeholder="Only digits!">
+        <label class="task_condition" for="usrInput1"><b>Enter the time in the seconds:</b></label>
+        <input id="usrInput1" type="number" name="time_1" placeholder="Only digits!">
          <p><label class="text_warning" for="btnCalcTime">*If push this button you will calculate the time (format hh:mm:ss):</label></p>
         <input type="button" id="btnCalcTime" value="Calculate the time" onclick="calcTime()">
       </form>
@@ -27,8 +27,8 @@
     <div>
       <h2>Step 2.</h2>
       <form>
-        <label class="task_condition" for="usr_num"><b>Enter the time in the format hh:mm:ss</b></label>
-        <input id="usr_num" type="datetime" name="time_2" placeholder="format hh:mm:ss">
+        <label class="task_condition" for="usrInput2"><b>Enter the time in the format hh:mm:ss</b></label>
+        <input id="usrInput2" type="datetime" name="time_2" placeholder="format hh:mm:ss">
         <p><label class="text_warning" for="btnCalcSec">*If push this button you will calculate the time (to seconds):</label><p>
         <input type="button" id="btnCalcSec" value="Calculate seconds" onclick="calcSec()">
       </form>
