fixed misstakes after first revue, added validateempty data, Ipv6, cleared result

--- a/PS_2/warm-up/task5/index.html
+++ b/PS_2/warm-up/task5/index.html
@@ -11,7 +11,7 @@
   <section class="wrapper">
     <form name="form1" onReset="alert('The text area will be cleared.')">
       <div><textarea id="user_input" autofocus></textarea></div>
-      <div><input type="reset" value="Reset" id="reset_btn"></div>
+      <div><input type="reset" value="Reset input data" id="reset_btn"></div>
     </form>
     <div id="result"></div>
   </section>
