little fixes after first revue

--- a/PS_2/warm-up/task6/index.html
+++ b/PS_2/warm-up/task6/index.html
@@ -10,9 +10,9 @@
 
   <section>
     <form>
-      <div><label class="input">Enter any text</label></div>
+      <div><label class="input" for="userText">Enter any text</label></div>
       <div><textarea id="userText" rows="8" cols="30" autofocus></textarea></div>
-      <div><label class="input">Enter RegEx or text</label></div>
+      <div><label class="input" for="userExp">Enter RegEx or text</label></div>
       <div><input type="text" id="userExp" placeholder="Enter RegExp or text"></div>
       <div><input type="submit" id="matchBtn" value="Match!"></div>
     </form>
