small fixes after first revue

--- a/PS_2/Table task/index.html
+++ b/PS_2/Table task/index.html
@@ -42,8 +42,8 @@
             <table class="table is-striped is-fullwidth">
                 <thead>
                 <tr>
-                    <th id="category">Category ▼▲</th>
-                    <th id="name">Name ▼▲</th>
+                    <th id="category" style="cursor: pointer">Category ▼▲</th>
+                    <th id="name" style="cursor: pointer">Name ▼▲</th>
                     <th>Amount</th>
                     <th>Price</th>
                 </tr>
